Minify updated CSS + other changes

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                             <div class="panel-title">Productive Calender</div>
                                             A Django based application that functions as a <strong>complete planner</strong> with features like <strong>event organizing, Google Calender Sync, weather details, on-screen clock, responsive design and a beautiful UI</strong>.<br><br>
                                             <div align="center">
-                                                <a href="https://github.com/AnirudhGoel/Calender" target='_blank'><button type="button" class="btn btn-info proj-link-button"><i class="fab fa-github"></i> Github</button></a>
+                                                <a href="https://github.com/AnirudhGoel/Calender" target='_blank'><button type="button" class="btn btn-primary proj-link-button"><i class="fab fa-github"></i> Github</button></a>
                                                 <a href="https://productive-calender.herokuapp.com/" target='_blank'><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
                                             </div>
                                         </div>
@@ -294,7 +294,7 @@
                                             Started as a hobby project, it has been approved by Pinterest is currently being used by <strong>100+ users and has re-pinned 200,000+ pins</strong> till date.
                                             <br><br>
                                             <div align="center">
-                                                <a href="https://github.com/AnirudhGoel/PinterestAutomatic" target="_blank"><button type="button" class="btn btn-info proj-link-button"><i class="fab fa-github"></i> Github</button></a>
+                                                <a href="https://github.com/AnirudhGoel/PinterestAutomatic" target="_blank"><button type="button" class="btn btn-primary proj-link-button"><i class="fab fa-github"></i> Github</button></a>
                                                 <a href="https://pinautomatic.herokuapp.com/" target='_blank'><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
                                             </div>
                                         </div>
@@ -318,7 +318,7 @@
                                             <div class="panel-title">Interests Ranker</div>
                                             A webapp which displays <strong>common interests</strong> of a group of people in form of a <strong>prioritized list</strong> by reading their Github Profiles. Can be used for knowing the audience for hosting a workshop or educational session or for knowing the strengths of some Hackathon team.<br><br>
                                             <div align="center">
-                                                <a href="https://github.com/AnirudhGoel/Interests-Ranker" target='_blank'><button type="button" class="btn btn-info proj-link-button"><i class="fab fa-github"></i> Github</button></a>
+                                                <a href="https://github.com/AnirudhGoel/Interests-Ranker" target='_blank'><button type="button" class="btn btn-primary proj-link-button"><i class="fab fa-github"></i> Github</button></a>
                                                 <a href="https://interests-ranker.herokuapp.com/sample/index.html" target='_blank'><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
                                             </div>
                                         </div>
@@ -336,7 +336,7 @@
                                             <div class="panel-title">No Server To Do List</div>
                                             A web-app to list down all your To-Do tasks because every now and then we need to write down our chores. A completely front-end based To Do List made using JavaScript, jQuery and Browser Local Storage.<br><br>
                                             <div align="center">
-                                                <a href="https://github.com/AnirudhGoel/To-Do-List" target='_blank'><button type="button" class="btn btn-info proj-link-button"><i class="fab fa-github"></i> Github</button></a>
+                                                <a href="https://github.com/AnirudhGoel/To-Do-List" target='_blank'><button type="button" class="btn btn-primary proj-link-button"><i class="fab fa-github"></i> Github</button></a>
                                                 <a href="https://anirudhgoel.github.io/To-Do-List/" target="_blank"><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
                                             </div>
 
