Update CERN Text

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <div class='intro-text'>
                                 <br>Hello, I am Anirudh Goel and I am currently a Software Developer at CERN.
                                 I designed & developed this web page and it lists brief highlights of my professional journey.
-                                Apart from technology, I like to talk about finance (investing, fintech), business, education and cooking.
+                                Apart from technology, I like to talk about finance (investing, fintech), business, education and baking.
                             </div>
                         </div>
                         <div class='col-sm-2'></div>
@@ -193,8 +193,8 @@
                                             <ul>
                                                 <li><strong>High availability for PostgreSQL based critical services</strong>
                                                     <ul>
-                                                        <li>Setup automated pipeline (using RunDeck, Docker, Nomad & Puppet) used to deploy multiple highly available PostgreSQL clusters for critical services (such as LHCb Data Monitoring, SSO, Puppet) to achieve 99.999% high availability.</li>
-                                                        <li>Wrote custom bash scripts for failover and online recovery to automatically promote standby to primary in case of primary instance failure and, automatically repair and recover failed instance after failover. Patch also accepted for bug fix in official PgPool failover script.</li>
+                                                        <li>Setup automated pipeline (using RunDeck, Docker, Nomad & Puppet) used to deploy multiple highly available PostgreSQL clusters for critical services</li>
+                                                        <li>Wrote custom bash scripts for failover and online recovery. Patch also accepted for bug fix in official PgPool failover script.</li>
                                                         <li>Used synchronous replication to guarantee zero data loss; PgPool-II for load balancing and failover management; deployed using Nomad to ensure redundancy on PgPool level; used PgPool-II exporter, Prometheus and Prometheus alertmanager for real-time monitoring and alerts.</li>
                                                         <li>Active member of the PgPool hackers community; discovered and contributed to patching multiple bugs in the PgPool-II project.</li>
                                                     </ul>
