Update CERN timeline, opening message and copyright period

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class='col-sm-8'>
                             <br>
                             <div class='intro-text'>
-                                <br>Hello, I am Anirudh Goel and I am currently a Software Developer at CERN.
+                                <br>Hello, I am Anirudh Goel, a former Software Engineer at CERN, and I'm currently working on something exciting that's still under the wraps!
                                 I designed & developed this web page and it lists brief highlights of my professional journey.
                                 Apart from technology, I like to talk about finance (investing, fintech), business, education and baking.
                             </div>
@@ -186,7 +186,7 @@
                                                 <div class="org-name"><a href="https://home.cern" target="_blank"><strong>CERN</strong></a></div>
                                                 <br>
                                                 <div class="col-sm-6 intern-post"><strong>Software Developer</strong></div>
-                                                <div class="col-sm-6 intern-time">Feb '20 - Present</div>
+                                                <div class="col-sm-6 intern-time">Feb '20 - Jan '23</div>
                                             </div>
                                             <br><br>
                                             Core member of the Database on Demand (DBoD) Team in the CERN IT department; DBoD runs 1000+ database instances of PostgreSQL, MySQL and InfluxDB.
@@ -357,7 +357,7 @@
             <section class="footer">
                 <div class='foot-text'>
                     <center>
-                            &copy; 2015-22 Anirudh Goel |
+                            &copy; 2015-24 Anirudh Goel |
                         <strong>
                             <a href="//madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
                         </strong>
